--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <header>
-    <h1>Your Name</h1>
-    <p>PhD | Researcher in [Your Field]</p>
+    <h1>Martin A. Harris</h1>
+    <p>PhD | Researcher in Volcanology</p>
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
@@ -21,8 +21,9 @@
   <main>
     <h2>Welcome</h2>
     <p>
-      I’m a researcher at [Your Institution] focusing on [Your Topic].
+      I’m a Post Doctoral Research Associate at the University at Buffalo focusing on the physical properties of lavas. I am primarily focused on gaining a better understanding of lava viscosity and its relationship to phase (crystals + bubbles) proportions.
       This website summarizes my research, publications, and academic background.
+      Please contact me at: Martin.a.harris95@gmail.com for any questions or future communication.
     </p>
   </main>
   <footer>
