--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>Martin A. Harris</h1>
-    <p>PhD | Researcher in Volcanology</p>
+    <p>PhD (2025) |Post Doctoral Research Associate in Volcanology</p>
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
@@ -21,9 +21,9 @@
   <main>
     <h2>Welcome</h2>
     <p>
-      I’m a Post Doctoral Research Associate at the University at Buffalo focusing on the physical properties of lavas. I am primarily focused on gaining a better understanding of lava viscosity and its relationship to phase (crystals + bubbles) proportions.
-      This website summarizes my research, publications, and academic background.
-      Please contact me at: Martin.a.harris95@gmail.com for any questions or future communication.
+I’m a Postdoctoral Research Associate at the University at Buffalo, specializing in the physical properties of lavas. My primary focus is on understanding how lava viscosity evolves during effusive activity and its relationship to phase proportions—including crystals and bubbles—as well as temperature and oxygen fugacity. My research interests and experience also include physical and petrochemical volcanology, where I have developed extensive skills in mapping and forensic analysis of pyroclastic, phreatic, and effusive deposits, along with identifying glaciovolcanic landforms formed from past lava-ice-water interactions. Additionally, I have expertise in major, minor, and isotope geochemistry for petrological sourcing, and in applying geochronology and paleomagnetism to volcanic rocks to decipher eruption timescales.
+This website summarizes my research, publications, and academic background.
+For any questions or future communication, please contact me at: Martin.a.harris95@gmail.com.
     </p>
   </main>
   <footer>
