--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ For any questions or future communication, please contact me at: Martin.a.harris
     </p>
   </main>
   <footer>
-    <p>© 2025 Your Name • Contact: your.email@example.com</p>
+    <p>© 2025 Martin A. Harris • Contact: martin.a.harris95@gmail.com</p>
   </footer>
 </body>
 </html>
