--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <p>
 I’m a Postdoctoral Research Associate at the University at Buffalo, specializing in the physical properties of lavas. My primary focus is on understanding how lava viscosity evolves during effusive activity and its relationship to phase proportions—including crystals and bubbles—as well as temperature and oxygen fugacity. My research interests and experience also include physical and petrochemical volcanology, where I have developed extensive skills in mapping and forensic analysis of pyroclastic, phreatic, and effusive deposits, along with identifying glaciovolcanic landforms formed from past lava-ice-water interactions. Additionally, I have expertise in major, minor, and isotope geochemistry for petrological sourcing, and in applying geochronology and paleomagnetism to volcanic rocks to decipher eruption timescales.
 This website summarizes my research, publications, and academic background.
-For any questions or future communication, please feel free to contact me at-- Martin.a.harris95@gmail.com.
+For any questions or future communication, please feel free to contact me at--
+      Martin.a.harris95@gmail.com.
     </p>
   </main>
   <footer>
