--- a/index.html
+++ b/index.html
@@ -17,6 +17,19 @@
       <a href="publications.html">Publications</a>
       <a href="cv.pdf">CV</a>
     </nav>
+    
+    <h2>Gallery</h2>
+
+<div class="gallery">
+  <!-- Images -->
+  <img src="media\Lava_Av1.JPG" alt="Axial Viscometery in Iceland">
+  <img src="media/P1080516.JPG" alt="Rotational Viscometry in Iceland">
+  <img src="media\P1080745.JPG" alt="Lava samling in Iceland">
+  
+  <!-- GIFs -->
+  <img src="media/a2anql.gif" alt="Rotational Viscometry Clip">
+  <img src="media/a2ao65.gif.gif" alt="Axial Viscometry Clip">
+</div>
   </header>
   <main>
     <h2>Welcome</h2>
