--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
   <img src="media\P1080745.JPG" alt="Lava samling in Iceland">
   
   <!-- GIFs -->
-  <img src="media/a2anql.gif" alt="Rotational Viscometry Clip">
-  <img src="media/a2ao65.gif.gif" alt="Axial Viscometry Clip">
+   <!-- <img src="media/a2anql.gif" alt="Rotational Viscometry Clip">  -->
+    <!--<img src="media/a2ao65.gif.gif" alt="Axial Viscometry Clip">-->
 </div>
   </header>
   <main>
