--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
       <a href="publications.html">Publications</a>
       <a href="cv.pdf">CV</a>
     </nav>
-    
+    <!-- Large centered photo -->
+<div class="profile-photo-container">
+  <img src="media/Profile pic web.jpg" alt="Your Name" class="profile-photo" />
+</div>
+
     <h2>Gallery</h2>
 
 <div class="gallery">
