--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </nav>
     <!-- Large centered photo -->
 <div class="profile-photo-container">
-  <img src="media/Profile pic web.jpg" alt="Your Name" class="profile-photo" />
+  <img src="media/Profile pic web.jpeg" alt="Your Name" class="profile-photo" />
 </div>
 
     <h2>Gallery</h2>
