--- a/about.html
+++ b/about.html
@@ -18,7 +18,11 @@
   </header>
   <main>
     <h2>About Me</h2>
-    <p>[Short academic bio: where you studied, what you work on, interests.]</p>
+    <p>I earned my bachelor's degree from the University of Oregon in 2017, where I first became fascinated by volcanoes and the landscapes they produce. I went on to pursue a master's degree at the University of British Columbia, where I refined my field mapping skills in the rugged coastal mountains during the summers, focusing on the glaciovolcanic landforms surrounding the Mount Meager Volcanic Complex. I completed my master's degree in 2021 and then continued on to a PhD at the University at Buffalo, shifting my focus to the physical properties of basaltic lavas.
+
+For my dissertation work, I learned to engineer scientific tools to collect in-situ viscosity measurements of erupting lavas. I also developed techniques to remelt volcanic rocks in the laboratory to measure their physical properties and compare them to the field-based results. I earned my PhD in 2025 and currently serve as a Postdoctoral Research Associate at the University at Buffalo.
+
+My ongoing research goals include expanding the use of field viscometry to global eruptions by collaborating with other researchers working on active effusive lava systems. I aim to apply new insights on lava flow behavior to improve hazard assessments and modeling approaches for future volcanic eruptions.</p>
   </main>
   <footer>
     <p>© 2025 Your Name</p>
