--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@ For my dissertation work, I learned to engineer scientific tools to collect in-s
 My ongoing research goals include expanding the use of field viscometry to global eruptions by collaborating with other researchers working on active effusive lava systems. I aim to apply new insights on lava flow behavior to improve hazard assessments and modeling approaches for future volcanic eruptions.</p>
   </main>
   <footer>
-    <p>© 2025 Your Name</p>
+    <p>© 2025 Martin A. Harris</p>
   </footer>
 </body>
 </html>
