--- a/publications.html
+++ b/publications.html
@@ -20,10 +20,20 @@
     <h2>Selected Publications</h2>
     <ul>
       <li>
-        <strong>Doe, J.</strong> (2025). Title of the publication. <em>Journal Name</em>, Volume(Issue), Pages.
+        <Harris, M. A., Chevrel, M. O., Parsons, J. T., Latchimy, T., Thordarson, T., Höskuldsson, A., Moreland, W. M., Payet–Clerc, M., & Kolzenburg, S. (2024). Real-time, in situ viscosity mapping of active lava. Geology, 53(2), 181–185. https://doi.org/10.1130/G52558.1.
       </li>
       <li>
-        <strong>Doe, J.</strong> et al. (2024). Another paper title. <em>Conference Name</em>.
+        <Harris, M. A., Kolzenburg, S., Sonder, I., & Chevrel, M. O. (2024). A new portable penetrometer for measuring the viscosity of active lava. Review of Scientific Instruments. https://doi.org/10.1063/5.0206776.
+      </li>
+        <Chevrel, M. O., Latchimy, T., Batier, L., Delpoux, R., Harris, M. A., & Kolzenburg, S. (2023). A new portable field rotational viscometer for high-temperature melts. Review of Scientific Instruments, 94. https://doi.org/10.1063/5.0160247.
+      </li>
+      <li>
+        <Harris, M. A., Russell, J. K., Wilson, A., & Jicha, B. (2022). A 500 ka record of volcanism and paleoenvironment in the northern Garibaldi Volcanic Belt, British Columbia. Canadian Journal of Earth Sciences, 60(4), 401–421. https://doi.org/10.1139/cjes-2022-0101.
+      </li>
+        <Harris, M. A., & Russell, J. K. (2022). Polymagmatic glaciovolcanism: Cracked Mountain Tuya, Canadian Cascades. Frontiers in Earth Science, 10. https://doi.org/10.3389/feart.2022.859794.
+      </li>
+      <li>
+        <Harris, M. A., Russell, J. K., Barendregt, R., Porritt, L. A., & Wilson, A. (2022). Explosive glaciovolcanism at Cracked Mountain Volcano, Garibaldi Volcanic Belt, Canada. Journal of Volcanology and Geothermal Research, 423..
       </li>
     </ul>
   </main>
