--- a/publications.html
+++ b/publications.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Publications – Your Name</title>
+  <title>Publications – Martin A. Harris</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>Your Name</h1>
+    <h1>Martin A. Harris</h1>
     <nav>
-      < <a href="index.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="research.html">Research</a>
       <a href="publications.html">Publications</a>
@@ -20,20 +20,22 @@
     <h2>Selected Publications</h2>
     <ul>
       <li>
-        <Harris, M. A., Chevrel, M. O., Parsons, J. T., Latchimy, T., Thordarson, T., Höskuldsson, A., Moreland, W. M., Payet–Clerc, M., & Kolzenburg, S. (2024). Real-time, in situ viscosity mapping of active lava. Geology, 53(2), 181–185. https://doi.org/10.1130/G52558.1.
+        Harris, M. A., Chevrel, M. O., Parsons, J. T., Latchimy, T., Thordarson, T., Höskuldsson, A., Moreland, W. M., Payet–Clerc, M., & Kolzenburg, S. (2024). Real-time, in situ viscosity mapping of active lava. <em>Geology, 53</em>(2), 181–185. <a href="https://doi.org/10.1130/G52558.1" target="_blank">https://doi.org/10.1130/G52558.1</a>.
       </li>
       <li>
-        <Harris, M. A., Kolzenburg, S., Sonder, I., & Chevrel, M. O. (2024). A new portable penetrometer for measuring the viscosity of active lava. Review of Scientific Instruments. https://doi.org/10.1063/5.0206776.
-      </li>
-        <Chevrel, M. O., Latchimy, T., Batier, L., Delpoux, R., Harris, M. A., & Kolzenburg, S. (2023). A new portable field rotational viscometer for high-temperature melts. Review of Scientific Instruments, 94. https://doi.org/10.1063/5.0160247.
+        Harris, M. A., Kolzenburg, S., Sonder, I., & Chevrel, M. O. (2024). A new portable penetrometer for measuring the viscosity of active lava. <em>Review of Scientific Instruments</em>. <a href="https://doi.org/10.1063/5.0206776" target="_blank">https://doi.org/10.1063/5.0206776</a>.
       </li>
       <li>
-        <Harris, M. A., Russell, J. K., Wilson, A., & Jicha, B. (2022). A 500 ka record of volcanism and paleoenvironment in the northern Garibaldi Volcanic Belt, British Columbia. Canadian Journal of Earth Sciences, 60(4), 401–421. https://doi.org/10.1139/cjes-2022-0101.
-      </li>
-        <Harris, M. A., & Russell, J. K. (2022). Polymagmatic glaciovolcanism: Cracked Mountain Tuya, Canadian Cascades. Frontiers in Earth Science, 10. https://doi.org/10.3389/feart.2022.859794.
+        Chevrel, M. O., Latchimy, T., Batier, L., Delpoux, R., Harris, M. A., & Kolzenburg, S. (2023). A new portable field rotational viscometer for high-temperature melts. <em>Review of Scientific Instruments, 94</em>. <a href="https://doi.org/10.1063/5.0160247" target="_blank">https://doi.org/10.1063/5.0160247</a>.
       </li>
       <li>
-        <Harris, M. A., Russell, J. K., Barendregt, R., Porritt, L. A., & Wilson, A. (2022). Explosive glaciovolcanism at Cracked Mountain Volcano, Garibaldi Volcanic Belt, Canada. Journal of Volcanology and Geothermal Research, 423..
+        Harris, M. A., Russell, J. K., Wilson, A., & Jicha, B. (2022). A 500 ka record of volcanism and paleoenvironment in the northern Garibaldi Volcanic Belt, British Columbia. <em>Canadian Journal of Earth Sciences, 60</em>(4), 401–421. <a href="https://doi.org/10.1139/cjes-2022-0101" target="_blank">https://doi.org/10.1139/cjes-2022-0101</a>.
+      </li>
+      <li>
+        Harris, M. A., & Russell, J. K. (2022). Polymagmatic glaciovolcanism: Cracked Mountain Tuya, Canadian Cascades. <em>Frontiers in Earth Science, 10</em>. <a href="https://doi.org/10.3389/feart.2022.859794" target="_blank">https://doi.org/10.3389/feart.2022.859794</a>.
+      </li>
+      <li>
+        Harris, M. A., Russell, J. K., Barendregt, R., Porritt, L. A., & Wilson, A. (2022). Explosive glaciovolcanism at Cracked Mountain Volcano, Garibaldi Volcanic Belt, Canada. <em>Journal of Volcanology and Geothermal Research, 423</em>. <a href="https://doi.org/10.1016/j.jvolgeores.2022.107477" target="_blank">https://doi.org/10.1016/j.jvolgeores.2022.107477</a>.
       </li>
     </ul>
   </main>
