--- a/publications.html
+++ b/publications.html
@@ -1,46 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Publications – Martin A. Harris</title>
-  <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 40px;
+      background-color: #ffffff;
+      color: #222;
+      font-size: 1.1rem;
+      line-height: 1.6;
+    }
+    h2 {
+      margin-top: 2em;
+      border-bottom: 2px solid #ccc;
+      padding-bottom: 0.3em;
+    }
+    p {
+      margin-bottom: 1.2em;
+    }
+    a {
+      color: #0645AD;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    hr {
+      margin: 2em 0;
+      border: none;
+      border-top: 1px solid #ccc;
+    }
+  </style>
 </head>
 <body>
-  <header>
-    <h1>Martin A. Harris</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="research.html">Research</a>
-      <a href="publications.html">Publications</a>
-      <a href="cv.pdf">CV</a>
-    </nav>
-  </header>
-  <main>
-    <h2>Selected Publications</h2>
-    <ul>
-      <li>
-        Harris, M. A., Chevrel, M. O., Parsons, J. T., Latchimy, T., Thordarson, T., Höskuldsson, A., Moreland, W. M., Payet–Clerc, M., & Kolzenburg, S. (2024). Real-time, in situ viscosity mapping of active lava. <em>Geology, 53</em>(2), 181–185. <a href="https://doi.org/10.1130/G52558.1" target="_blank">https://doi.org/10.1130/G52558.1</a>.
-      </li>
-      <li>
-        Harris, M. A., Kolzenburg, S., Sonder, I., & Chevrel, M. O. (2024). A new portable penetrometer for measuring the viscosity of active lava. <em>Review of Scientific Instruments</em>. <a href="https://doi.org/10.1063/5.0206776" target="_blank">https://doi.org/10.1063/5.0206776</a>.
-      </li>
-      <li>
-        Chevrel, M. O., Latchimy, T., Batier, L., Delpoux, R., Harris, M. A., & Kolzenburg, S. (2023). A new portable field rotational viscometer for high-temperature melts. <em>Review of Scientific Instruments, 94</em>. <a href="https://doi.org/10.1063/5.0160247" target="_blank">https://doi.org/10.1063/5.0160247</a>.
-      </li>
-      <li>
-        Harris, M. A., Russell, J. K., Wilson, A., & Jicha, B. (2022). A 500 ka record of volcanism and paleoenvironment in the northern Garibaldi Volcanic Belt, British Columbia. <em>Canadian Journal of Earth Sciences, 60</em>(4), 401–421. <a href="https://doi.org/10.1139/cjes-2022-0101" target="_blank">https://doi.org/10.1139/cjes-2022-0101</a>.
-      </li>
-      <li>
-        Harris, M. A., & Russell, J. K. (2022). Polymagmatic glaciovolcanism: Cracked Mountain Tuya, Canadian Cascades. <em>Frontiers in Earth Science, 10</em>. <a href="https://doi.org/10.3389/feart.2022.859794" target="_blank">https://doi.org/10.3389/feart.2022.859794</a>.
-      </li>
-      <li>
-        Harris, M. A., Russell, J. K., Barendregt, R., Porritt, L. A., & Wilson, A. (2022). Explosive glaciovolcanism at Cracked Mountain Volcano, Garibaldi Volcanic Belt, Canada. <em>Journal of Volcanology and Geothermal Research, 423</em>. <a href="https://doi.org/10.1016/j.jvolgeores.2022.107477" target="_blank">https://doi.org/10.1016/j.jvolgeores.2022.107477</a>.
-      </li>
-    </ul>
-  </main>
-  <footer>
-    <p>© 2025 Martin A. Harris</p>
-  </footer>
+
+  <h2>Peer-Reviewed Publications</h2>
+
+  <h3>Under Review</h3>
+  <p>Harris, M. A., Kolzenburg, S., & Chevrel, M. O. (2025). The viscosity of multiphase lava: New insights from integrating laboratory and field measurements. <em>Earth and Planetary Science Letters</em> (under review).</p>
+  <p>Saucier, É., Harris, M. A., & Kolzenburg, S. (2025). Shear induced permeability heterogeneity of dome lavas: A mechanism for cyclic explosive gas venting. <em>Geophysical Research Letters</em> (under review).</p>
+
+  <h3>Published</h3>
+  <p>Harris, M. A., Chevrel, M. O., Parsons, J. T., Latchimy, T., Thordarson, T., Höskuldsson, A., Moreland, W. M., Payet–Clerc, M., & Kolzenburg, S. (2024). Real-time, in situ viscosity mapping of active lava. <em>Geology</em>, 53(2), 181–185. <a href="https://doi.org/10.1130/G52558.1">https://doi.org/10.1130/G52558.1</a></p>
+  <p>Harris, M. A., Kolzenburg, S., Sonder, I., & Chevrel, M. O. (2024). A new portable penetrometer for measuring the viscosity of active lava. <em>Review of Scientific Instruments</em>. <a href="https://doi.org/10.1063/5.0206776">https://doi.org/10.1063/5.0206776</a></p>
+  <p>Chevrel, M. O., Latchimy, T., Batier, L., Delpoux, R., Harris, M. A., & Kolzenburg, S. (2023). A new portable field rotational viscometer for high-temperature melts. <em>Review of Scientific Instruments</em>, 94. <a href="https://doi.org/10.1063/5.0160247">https://doi.org/10.1063/5.0160247</a></p>
+  <p>Harris, M. A., Russell, J. K., Wilson, A., & Jicha, B. (2022). A 500 ka record of volcanism and paleoenvironment in the northern Garibaldi Volcanic Belt, British Columbia. <em>Canadian Journal of Earth Sciences</em>, 60(4), 401–421. <a href="https://doi.org/10.1139/cjes-2022-0101">https://doi.org/10.1139/cjes-2022-0101</a></p>
+  <p>Harris, M. A., & Russell, J. K. (2022). Polymagmatic glaciovolcanism: Cracked Mountain Tuya, Canadian Cascades. <em>Frontiers in Earth Science</em>, 10. <a href="https://doi.org/10.3389/feart.2022.859794">https://doi.org/10.3389/feart.2022.859794</a></p>
+  <p>Harris, M. A., Russell, J. K., Barendregt, R., Porritt, L. A., & Wilson, A. (2022). Explosive glaciovolcanism at Cracked Mountain Volcano, Garibaldi Volcanic Belt, Canada. <em>Journal of Volcanology and Geothermal Research</em>, 423.</p>
+
+  <hr>
+
+  <h2>Other Publications</h2>
+  <p>Wilson, A. M., Russell, J. K., & Harris, M. A. (2024). Glaciovolcanism in the Garibaldi volcanic belt: Nine geological maps from southwestern British Columbia, Canada. <em>British Columbia Geological Survey Open File 2024-10</em>, 64 p.</p>
+  <p>Harris, M. A., Russell, J. K., Muhammad, M., & Williams-Jones, G. (2022). Mount Meager volcanic complex, Garibaldi Volcanic Belt, British Columbia: Expanded bedrock map. <em>Geological Survey of Canada, Open File 8881</em>, 1 Sheet. <a href="https://doi.org/10.4095/329886">https://doi.org/10.4095/329886</a></p>
+  <p>Harris, M. A., & Russell, J. K. (2021). Bedrock mapping results for the Mount Meager geothermal research initiative. <em>Geoscience BC</em>, 7–34.</p>
+  <p>Harris, M. A., Muhammad, M., Williams-Jones, G., & Russell, J. K. (2020). Bedrock mapping for Mount Meager Geothermal Research Initiative, Garibaldi Geothermal Energy Project. <em>Geoscience BC</em>, 2, 1–29.</p>
+
+  <hr>
+
+  <h2>Conference Proceedings</h2>
+  <p>Harris, M.A., Kolzenburg, S., Chevrel, M.O. (2025). TM7: New Advancements in Techniques for Investigating Lava Rheology. <em>Society of Rheology</em>. (Invited)</p>
+  <p>Kolzenburg, S., Harris, M.A., Chevrel, M.O. (2025). A new generation of field rheometers and their potential for improving near real-time lava flow monitoring. <em>Volcanology in Practice</em>.</p>
+  <p>Harris, M.A., Chevrel, M.O., Kolzenburg, S. (2024). In-situ parameterization of the pāhoehoe-ʻāʻā transition of the 2023 Litli Hrútur lavas, Iceland. <em>AGU Fall Meeting Abstracts</em>, V51C-309.</p>
+  <p>Saucier, E., Kolzenburg, S., Harris, M.A. (2024). Permeability anisotropy of dome lavas constrained by in-situ field measurements. <em>AGU Fall Meeting Abstracts</em>, V13E-3309.</p>
+  <p>Kolzenburg, S., Harris, M.A., Chevrel, M.O. (2024). The effect of oxygen fugacity on basaltic melt rheology and texture. <em>AGU Fall Meeting Abstracts</em>, V51C-3096.</p>
+  <p>Harris, M.A., Kolzenburg, S., Chevrel, M.O., Parsons, J.T., Sonder, I. (2023). A new portable penetrometer for measuring viscosity of lava. <em>GSA Abstracts with Programs</em>, Vol. 55. <a href="https://doi.org/10.1130/abs/2023AM-393560">https://doi.org/10.1130/abs/2023AM-393560</a></p>
+  <p>Harris, M.A, Russell, K., Wilson, A., Jicha, B. (2022). A 500 ka record of glaciovolcanism in the Mount Meager volcanic complex, northern Garibaldi Volcanic Belt, Canada. <em>AGU Fall Meeting Abstracts</em>, A15H-1328.</p>
+  <p>Harris, M.A., Russell, J.K. (2021). The magmatic origins for Cracked Mountain, SW British Columbia. <em>AGU Fall Meeting</em>, V31A-05.</p>
+  <p>Harris, M.A., Russell, J.K., Barendregt, R., Porritt, L.A., Wilson, A.M. (2021). Explosive glaciovolcanism at Cracked Mountain Volcano, Canada. <em>Geological Association of Canada, Special Session 19 Volcanism</em>.</p>
+
 </body>
 </html>
