--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <img src="media/Profile pic web.jpeg" alt="Your Name" class="profile-photo" />
 </div>
 
-    <h2>Gallery</h2>
+    <h2>Work on Active Lava, Iceland</h2>
 
 <div class="gallery">
   <!-- Images -->
