--- a/research.html
+++ b/research.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Research – Your Name</title>
+  <title>Research – Martin A. Harris</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>Your Name</h1>
+    <h1>Martin A. Harris</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
@@ -16,19 +16,51 @@
       <a href="cv.pdf">CV</a>
     </nav>
   </header>
+
   <main>
     <h2>Research</h2>
     <p>
-      My work focuses on [Your Research Focus]. I use [methods or tools] to study [research subject].
+      My current work focuses on understanding the physical properties of lava, specifically the viscosity of basalts. I use a combined approach of in-situ field techniques and high-temperature laboratory techniques to study how the lava viscosity changes with temperature, crystallinity, vesicularity, and oxygen fugacity.
     </p>
+    <p>
+      Additionally, I still have a keen interest in all things related to physical and petrochemical volcanology. Specifically, I am fascinated by magma-ice interactions and the landforms they produce. I have been involved in studies that use the presence (and absence) of glaciovolcanic landforms to reconstruct localized paleoenviroments. I firmly believe this is an underutilized tool in the recovery of past cycles of glaciation.
+    </p>
+    <p>
+      Lastly, I have an interest in shallow magmatic plumbing systems within the crust. I have been involved in petrochemical studies that elucidate monogenetic magma chamber dynamics, storage, and I continue to find the usage of geochemical data conjoined to field observations a fascinating way to gain insight into the magma-crustal dynamics of the Earth.
+    </p>
+
     <h3>Current Projects</h3>
     <ul>
-      <li><strong>Project 1:</strong> Short description.</li>
-      <li><strong>Project 2:</strong> Short description.</li>
+      <li>
+        <strong>The Rheological and Textural Evolution of Moana Loa Lava, Insights from 2022 Eruption:</strong>  
+        This study employs conventional remelt rheology for the lavas erupted near the summit of Mauna Loa in 2022. Conditions of supra-liquidus and sub-liquidus (at thermal disequilibrium and equilibrium) are simulated to recover the viscosity changes across temperature and crystallization space.
+      </li>
+      <li>
+        <strong>The Multiphase Rheology of Natural Lava: Insights from Litli-Hrútur, Iceland:</strong>  
+        The study is the first to combine in-situ field viscometry with comprehensive laboratory remelt rheology. This combined approach gives insight into the true natural eruptive evolution of viscosity (as highlighted in 
+        <a href="https://doi.org/10.1130/G52558.1" target="_blank">Harris et al. 2024</a>) while also shedding light on the effectiveness and limitations of laboratory experiments.
+      </li>
+    </ul>
+
+    <h3>Past Projects</h3>
+    <ul>
+      <li>
+        <strong>Glaciovolcanism within the Mount Meager Volcanic Complex of SW British Columbia:</strong>  
+        This study employs conventional physical volcanology to reconstruct the eruptive history of a transitional explosive and effusive tuya, Cracked Mountain, near the flank of the stratovolcano Mount Meager 
+        (<a href="https://doi.org/10.1016/j.jvolgeores.2022.107477" target="_blank">link</a>).
+        The work on Cracked Mountain was supported by further mapping of both glaciovolcanic and non-glaciovolcanic landforms around the Mount Meager Volcanic complex, which, when combined with a series of new geochronology ages, yielded a robust paleoenvironmental reconstruction across the last 500 ka for the localized region 
+        (<a href="https://doi.org/10.1139/cjes-2022-0101" target="_blank">link</a>).
+      </li>
+      <li>
+        <strong>Polymagmatic Sources of a Monogenetic Volcano:</strong>  
+        This study employed petrochemical analyses for the monogenetic Cracked Mountain Tuya basalts, which revealed a bimodal phase assemblage of phenocrysts. Subsequent thermodynamic modeling of the two crystal assemblages revealed distinct crustal conditions requiring two separate storage conditions for the erupted lavas 
+        (<a href="https://doi.org/10.3389/feart.2022.859794" target="_blank">link</a>).
+      </li>
     </ul>
   </main>
+
   <footer>
-    <p>© 2025 Your Name</p>
+    <p>© 2025 Martin A. Harris</p>
   </footer>
 </body>
 </html>
