--- a/research.html
+++ b/research.html
@@ -45,16 +45,10 @@
     <h3>Past Projects</h3>
     <ul>
       <li>
-        <strong>Glaciovolcanism within the Mount Meager Volcanic Complex of SW British Columbia:</strong>  
-        This study employs conventional physical volcanology to reconstruct the eruptive history of a transitional explosive and effusive tuya, Cracked Mountain, near the flank of the stratovolcano Mount Meager 
-        (<a href="https://doi.org/10.1016/j.jvolgeores.2022.107477" target="_blank">link</a>).
-        The work on Cracked Mountain was supported by further mapping of both glaciovolcanic and non-glaciovolcanic landforms around the Mount Meager Volcanic complex, which, when combined with a series of new geochronology ages, yielded a robust paleoenvironmental reconstruction across the last 500 ka for the localized region 
-        (<a href="https://doi.org/10.1139/cjes-2022-0101" target="_blank">link</a>).
-      </li>
-      <li>
-        <strong>Polymagmatic Sources of a Monogenetic Volcano:</strong>  
-        This study employed petrochemical analyses for the monogenetic Cracked Mountain Tuya basalts, which revealed a bimodal phase assemblage of phenocrysts. Subsequent thermodynamic modeling of the two crystal assemblages revealed distinct crustal conditions requiring two separate storage conditions for the erupted lavas 
-        (<a href="https://doi.org/10.3389/feart.2022.859794" target="_blank">link</a>).
+        <p><strong>Glaciovolcanism within the Mount Meager Volcanic Complex of SW British Columbia:</strong> This study employs conventional physical volcanology to reconstruct the eruptive history of a transitional explosive and effusive tuya, Cracked Mountain, near the flank of the stratovolcano Mount Meager (<a href="https://doi.org/10.1016/j.jvolgeores.2022.107477" target="_blank">Harris et al. 2022</a>). The work on Cracked Mountain was supported by further mapping of both glaciovolcanic and non-glaciovolcanic landforms around the Mount Meager Volcanic Complex, which, when combined with a series of new geochronology ages, yielded a robust paleoenvironmental reconstruction across the last 500 ka for the localized region (<a href="https://doi.org/10.1139/cjes-2022-0101" target="_blank">Harris et al. 2023</a>).</p>
+
+<p><strong>Polymagmatic Sources of a Monogenetic Volcano:</strong> This study employed petrochemical analyses for the monogenetic Cracked Mountain Tuya basalts, which revealed a bimodal phase assemblage of phenocrysts. Subsequent thermodynamic modeling of the two crystal assemblages revealed distinct crustal conditions requiring two separate storage conditions for the erupted lavas (<a href="https://doi.org/10.3389/feart.2022.859794" target="_blank">Harris and Russell 2022</a>).</p>
+
       </li>
     </ul>
   </main>
