--- a/research.html
+++ b/research.html
@@ -71,8 +71,8 @@
         </p>
       </div>
       <div>
-        <img src="images/mauna-loa.jpg" alt="Mauna Loa lava flow" />
-        <div class="project-caption">Field site at Mauna Loa, 2022 eruption.</div>
+        <img src="media/Lava_pour.jpg" alt="Mauna Loa lava flow" />
+        <div class="project-caption">Example of Remelt Procedure in High Temperature Laboratory.</div>
       </div>
     </div>
 
@@ -84,7 +84,7 @@
         </p>
       </div>
       <div>
-        <img src="images/litli-hrutur.jpg" alt="Litli-Hrútur fieldwork" />
+        <img src="media/Lava_RV.jpg" alt="Litli-Hrútur fieldwork" />
         <div class="project-caption">In-situ viscometry at Litli-Hrútur, Iceland.</div>
       </div>
     </div>
@@ -99,8 +99,8 @@
         </p>
       </div>
       <div>
-        <img src="images/cracked-mountain.jpg" alt="Cracked Mountain tuya" />
-        <div class="project-caption">Cracked Mountain tuya near Mount Meager.</div>
+        <img src="media/glacial recons.jpg" alt="Cracked Mountain tuya" />
+        <div class="project-caption">Glacial Reconstruction of Mount Meager Volcanic Complex based on volcanic-landform-based-proxies.</div>
       </div>
     </div>
 
@@ -112,8 +112,8 @@
         </p>
       </div>
       <div>
-        <img src="images/basalt-thinsection.jpg" alt="Basalt thin section microscopy" />
-        <div class="project-caption">Microscopic view of phenocryst phases in basalt.</div>
+        <img src="media/CM_phases.jpg" alt="Basalt thin section microscopy" />
+        <div class="project-caption">Microscopic view of phenocryst phases in Cracked Mountain basalt.</div>
       </div>
     </div>
   </main>
