--- a/research.html
+++ b/research.html
@@ -5,6 +5,11 @@
   <title>Research – Martin A. Harris</title>
   <link rel="stylesheet" href="style.css" />
   <style>
+    /* Line spacing for this page */
+    main, main p, main h2, main h3, .project-caption {
+      line-height: 1.5;
+    }
+
     .project {
       display: flex;
       justify-content: space-between;
@@ -61,12 +66,10 @@
     <p>
       My current work focuses on understanding the physical properties of lava, specifically the viscosity of basalts. I use a combined approach of in-situ field techniques and high-temperature laboratory techniques to study how lava viscosity changes with temperature, crystallinity, vesicularity, and oxygen fugacity.
     </p>
-    </p>
     <p>
       Additionally, I have a keen interest in physical and petrochemical volcanology. I am fascinated by magma-ice interactions and the landforms they produce. I have been involved in studies that use the presence (and absence) of glaciovolcanic landforms to reconstruct localized paleoenviroments—an underutilized tool for understanding past glaciation cycles.
     </p>
     <p>
-      </p>
       I am also interested in shallow magmatic plumbing systems within the crust. My work includes petrochemical studies that reveal insights into monogenetic magma chamber dynamics and crustal storage conditions, using geochemical data conjoined with field observations.
     </p>
 
@@ -77,7 +80,8 @@
         <strong>The Rheological and Textural Evolution of Moana Loa Lava, Insights from 2022 Eruption:</strong>
         <p>
           This study uses remelt rheology on summit lavas from the 2022 Mauna Loa eruption. Both supra-liquidus and sub-liquidus conditions are simulated to capture viscosity changes across temperature and crystallization states.
-          </p>
+        </p>
+        <p>
           The subliquidus experiments at various thermal equilibriums are quenched and samples are analyzed for crystal abundance using scanning electron microscopy. This allows for a texurtural quantification with changing temperature and viscosity. These laboratory values are then compared with textural observations of naturally erupted lavas along different channel locations of the 2022 eruption.
         </p>
       </div>
