--- a/research.html
+++ b/research.html
@@ -95,7 +95,9 @@
       <div class="project-text">
         <strong>The Multiphase Rheology of Natural Lava: Insights from Litli-Hrútur, Iceland:</strong>
         <p>
-          This project combines in-situ field viscometry with lab-based remelt rheology to trace the true natural evolution of eruptive viscosity. Findings highlight both the capabilities and limitations of laboratory approximations (<a href="https://doi.org/10.1130/G52558.1" target="_blank">Harris et al. 2024</a>).
+          This project combines in-situ field viscometry with lab-based remelt rheology to trace the true natural evolution of eruptive viscosity. This type of work was only made possible through recent advances in field instrumentation. (<a href="https://doi.org/10.1063/5.0206776" target="_blank">Harris et al. 2024b</a>) (<a href="https://doi.org/10.1063/5.0160247" target="_blank">Chevrel et al. 2023</a>) 
+          </p>
+          Findings highlight how effective field viscometry is at capturing the rheological evolution of a unique eruption (<a href="https://doi.org/10.1130/G52558.1" target="_blank">Harris et al. 2024a</a>) while also verifying the successful capabilities and pointing out some of the limitations of laboratory remelt viscometry.
         </p>
       </div>
       <div class="project-image">
